--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             
             <div class="nav-bar">
                 <ul>
-                    <li><a href="#">contact us</a></li>
+                    <li><a href="./contact.html">contact us</a></li>
                     <li><a href="./about.html">About</a></li>
-                    <li><a href="#">news</a></li>
+                    <li><a href="./news.html">news</a></li>
                     <li><a href="#">Home</a></li>
                 </ul>
             </div>
