--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <p> The Community programme  ensures ability for an individual and the entire community to become lifelong learners. Through Community Education, citizens can develop relationships and problem solving skills to conquer the diverse challenges facing our society.</p>
    <div id="container1">
-    <img id="img1" src="/images/" height="400px" alt="">
+    <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px" alt="">
     <p id="txt1">Develop educational partnerships between schools and public and private service providers, business and industry, and civic and social service organizations      </p>
    </div>
 
@@ -68,14 +68,14 @@
     <p id="txt2">Use public education facilitiesx as community service centers for meeting the educational, social, health, cultural, and recreational needs of all ages and sectors of the community. </p>
 
 
-    <img id="img2" src="pexels-git-stephen-gitau-1686467.jpg" height="400px" alt="">
+    <img id="img2" src="images/pexels-kampus-production-5940837.jpg" height="400px" alt="">
 
     
    </div>
 
 
    <div id="container3">
-       <img id="img3" src="melissa-askew-tSlvoSZK77c-unsplash.jpg" height="400px" alt="">
+       <img id="img3" src="images/melissa-askew-tSlvoSZK77c-unsplash.jpg" height="400px" alt="">
 
        <p id="txt3">Provide a responsive, community-based system for collective action by all educational and community agencies to address community issues </p>
     </div> 
