fixed positioning in css file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
     <p> The Community programme  ensures ability for an individual and the entire community to become lifelong learners. Through Community Education, citizens can develop relationships and problem solving skills to conquer the diverse challenges facing our society.</p>
    <div id="container1">
-    <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px" alt="">
+    <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg  
+    " height="400px" alt="">
     <p id="txt1">Develop educational partnerships between schools and public and private service providers, business and industry, and civic and social service organizations      </p>
    </div>
 
