removed extra words

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <div class="hero">
     <div class="text">
-      <h1>CommunityInfoHub - THE COMMUNITY PROGRAMME</h1>
+      <h1>CommunityInfoHub</h1>
       <p>CommunityInfoHub - The Community Programme provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
     </div>
   </div>
