fixed the spaces in the page and aligned the images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="top_navbar" id="top_navbar">
-        <div class="logo">COMMUNITY</div>
+        <div class="logo">COMMUNITYINFOHUB</div>
         <div class="nav-bar">
             <ul>
                 <li><a href="./contact.html">contact us</a></li>
@@ -25,7 +25,7 @@
   <div class="hero">
     <div class="text">
       <h1>CommunityInfoHub</h1>
-      <p>CommunityInfoHub - The Community Programme provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
+      <p>CommunityInfoHub provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
     </div>
   </div>
         
@@ -52,7 +52,7 @@
   </div>
 
   <footer>
-    <div class="logo">COMMUNITY</div>
+    <div class="logo">COMMUNITYINFOHUB</div>
     <i class="fab fa-facebook-f"></i>
     <i class="fab fa-twitter"></i> 
     <i class="fab fa-instagram"></i> 
