--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </header>
   
   <div class="hero">
+    <img id="heroimg" src="images/pexels-祝-鹤槐-716281.jpg" height="900px" width="100%" alt="img">
     <div class="text">
       <h1>CommunityInfoHub</h1>
       <p>CommunityInfoHub provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
@@ -36,7 +37,7 @@
   <div class="features">
     <p>CommunityInfoHub ensures the ability for an individual and the entire community to become lifelong learners. Through Community Education, citizens can develop relationships and problem-solving skills to conquer the diverse challenges facing our society.</p>
     <div id="container1">
-      <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px" alt="">
+      <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px"  alt="">
       <p id="txt1">Develop educational partnerships between schools and public and private service providers, business and industry, and civic and social service organizations.</p>
     </div>
 
