removed extra words (#7)
* removed extra words

* fixed the spaces in the page and aligned the images

* changed some of the css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="top_navbar" id="top_navbar">
-        <div class="logo">COMMUNITY</div>
+        <div class="logo">COMMUNITYINFOHUB</div>
         <div class="nav-bar">
             <ul>
                 <li><a href="./contact.html">contact us</a></li>
@@ -23,9 +23,10 @@
   </header>
   
   <div class="hero">
+    <img id="heroimg" src="images/pexels-祝-鹤槐-716281.jpg" height="900px" width="100%" alt="img">
     <div class="text">
-      <h1>CommunityInfoHub - THE COMMUNITY PROGRAMME</h1>
-      <p>CommunityInfoHub - The Community Programme provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
+      <h1>CommunityInfoHub</h1>
+      <p>CommunityInfoHub provides a response to the challenge of improving education at the international, national, and local levels of society. It expands the traditional roles of public schools by creating relationships between home, school, and community.</p>
     </div>
   </div>
         
@@ -36,7 +37,7 @@
   <div class="features">
     <p>CommunityInfoHub ensures the ability for an individual and the entire community to become lifelong learners. Through Community Education, citizens can develop relationships and problem-solving skills to conquer the diverse challenges facing our society.</p>
     <div id="container1">
-      <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px" alt="">
+      <img id="img1" src="images/pexels-祝-鹤槐-716281.jpg" height="400px"  alt="">
       <p id="txt1">Develop educational partnerships between schools and public and private service providers, business and industry, and civic and social service organizations.</p>
     </div>
 
@@ -52,7 +53,7 @@
   </div>
 
   <footer>
-    <div class="logo">COMMUNITY</div>
+    <div class="logo">COMMUNITYINFOHUB</div>
     <i class="fab fa-facebook-f"></i>
     <i class="fab fa-twitter"></i> 
     <i class="fab fa-instagram"></i> 
